# services/api-gateway/internal/handler/types.go
@@ -1,0 +1,29 @@
+package handler
+
+type RegisterRequest struct {
+	Email     string `json:"email" binding:"required,email" example:"user@example.com"`
+	Password  string `json:"password" binding:"required,min=8" example:"password123"`
+	FirstName string `json:"first_name" binding:"required" example:"John"`
+	LastName  string `json:"last_name" binding:"required" example:"Doe"`
+}
+
+type LoginRequest struct {
+	Email    string `json:"email" binding:"required,email" example:"user@example.com"`
+	Password string `json:"password" binding:"required" example:"password123"`
+}
+
+type UpdateUserRequest struct {
+	Token     string   `json:"token" binding:"required" example:"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."`
+	FirstName string   `json:"first_name" example:"John"`
+	LastName  string   `json:"last_name" example:"Doe"`
+	Hometown  string   `json:"hometown" example:"New York"`
+	Interests []string `json:"interests" example:"['AI', 'Machine Learning']"`
+}
+
+type ValidateTokenRequest struct {
+	Token string `json:"token" binding:"required" example:"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."`
+}
+
+type RefreshTokenRequest struct {
+	RefreshToken string `json:"refresh_token" example:"your_refresh_token_here"`
+}
